<resources>

    <string name="username">Username</string>
    <string name="github">Github Username</string>
    <string name="NIM">NIM</string>
    <string name="Email">Email</string>
    <string name="pw">Password</string>
    <string name="noaccount">"Don't have an account?"</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="AvatarView">AvatarView</string>
    <string name="NameView">NameView</string>
    <string name="EmailView">EmailView</string>
    <string name="empty"></string>
    <string name="logout">Logout</string>
    <string name="Menu">Menu Utama</string>
    <string name="menu">Halaman Utama</string>
    <string name="cari">Cari Users</string>
    <string name="login">LOGIN</string>
    <string name="register_underline">Register</string>
    <string name="register">Register</string>
    <string name="UTS">UTS PAM TIARA</string>
    <string name="aplikasi">TIARA UTS PAM</string>
    <string name="sign">Registrasi</string>
    <string name="masuk_login">Aplikasi Tiara Putri Elisa</string>
</resources>