<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebf0ef"
    tools:context=".login.Login">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="500dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="3dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="211dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/alata"
                android:gravity="center"
                android:text="@string/masuk_login"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_username"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/edittext_bg"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/alata"
                android:hint="@string/username"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="text"
                android:padding="13dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edittext_bg"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/alata"
                android:hint="@string/pw"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPassword"
                android:padding="13dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_username" />

            <Button
                android:id="@+id/sign_in_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:background="@drawable/edittext_bg"
                android:backgroundTint="@color/cream"
                android:elevation="3dp"
                android:fontFamily="@font/alata"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/alata"
                android:text="@string/noaccount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sign_up_op"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/alata"
                android:selectAllOnFocus="true"
                android:text="@string/register_underline"
                android:textColor="#2196F3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textview2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>